--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
   padding: 10px;
   border-bottom: 1px solid black;
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   background-color: white;
 }
 
@@ -53,13 +53,13 @@ nav a {
 main {
   position: relative;
   top: 82px;
+  padding-bottom: 100px;
 }
 
 .column {
   display: flex;
   flex-direction: column;
   margin-right: 20px;
-  border: 1px dotted gray;
 }
 
 .column.large {
@@ -87,6 +87,7 @@ main {
   min-height: 300px;
   text-align: center;
   align-items: center;
+  min-width: 300px;
 }
 
 
@@ -143,4 +144,42 @@ p {
   color: DimGray;
   padding: 10px;
   border-bottom: 1px solid black;
+}
+
+/* Footer */
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 150px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  position: relative;
+}
+
+footer .title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 2px solid white;
+  padding-right: 30px;
+}
+
+footer .info {
+  display: inline-flex;
+  justify-content: space-around;
+  padding-bottom: 20px;
+}
+
+.info nav {
+  padding-left: 20px;
+}
+.info nav span {
+  padding: 10px;
 }
